[tool.poetry]
name = "aequitas"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [
    { include = "aequitas", from="src" },
    { include = "aequitas_cli", from="src" },
    { include = "aequitas_webapp", from="src" },
]

[tool.poetry.dependencies]
python = "3.9.16"
matplotlib = ">=3.0.3"
pandas = ">=0.24.1"
pyyaml = ">=5.1"
seaborn = ">=0.9.0"
altair = ">=4.1.0"
millify = "0.1.1"
scipy = ">=0.18.1"
optuna = ">=3.0.0"
aif360 = ">=0.5.0"
fairgbm = "0.9.14"
fairlearn = ">=0.8.0"
hydra-core = ">=1.3.0"
validators = ">=0.22.0"
hyperparameter-tuning = ">=0.3.1"
numpy = "1.23.5"
fastparquet = "2024.2.0"
sqlalchemy = {version = ">=1.1.1", optional = true}
tabulate = {version = "0.8.2", optional = true}
xhtml2pdf = {version = "0.2.15", optional = true}
ohio = {version = ">=0.2.0", optional = true}
markdown2 = {version = "2.3.5", optional = true}
flask = {version = "0.12.2", optional = true}
flask-bootstrap = {version = "3.3.7.1", optional = true}

[tool.poetry.extras]
cli = ["sqlalchemy", "tabulate", "xhtml2pdf", "ohio", "markdown2"]
webapp = ["flask", "flask-bootstrap"]

[tool.poetry.group.dev.dependencies]
argcmdr = "0.6.0"
awsebcli = "3.20.10"
bumpversion = "0.5.3"
flake8 = "3.5.0"
twine = "1.14.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
