[project]
name = "aequitas"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.8, <3.12"
dependencies = [
    "matplotlib>=3.7.5",
    "pandas>=2.0.3",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "altair>=5.4.0",
    "millify>=0.1.1",
    "scipy>=1.10.1",
    "optuna>=3.6.1",
    "aif360>=0.6.1",
    "lightgbm>=4.5.0",
    "fairgbm>=0.9.14",
    "fairlearn>=0.10.0",
    "hydra-core>=1.3.2",
    "hyperparameter-tuning>=0.3.1",
    "validators>=0.33.0",
    "numpy>=1.24.4",
    "fastparquet>=2024.2.0",
    "requests>=2.32.3",
    "torch>=2.4.0",
]

[project.optional-dependencies]
cli = [
    "sqlalchemy>=1.1.1",
    "tabulate>=0.9.0",
    "xhtml2pdf>=0.2.15",
    "ohio>=0.2.0",
    "markdown2>=2.3.5",
]
webapp = [
    "flask>=0.12.2",
    "flask-bootstrap>=3.3.7.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.2.5",
    "ipywidgets>=8.1.5",
    "setuptools>=74.1.2",
]
